# c4chess

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  Scacchi.cbp  Scacchi.depend  Scacchi.layout  c4chess-cb.cbp  c4chess-cb.depend  c4chess-cb.layout  c4chess-debug.bat  c4chess_debug.bat  command-line.bat  configure.ac  feedback.txt  git-commit.sh  notes.txt  scacchi
.github/workflows/: c-cpp.yml
output/: c4chess  config_boot.ini  feedback.txt  general_cfg_boot.ini
source/: config.c  config.c.save-failed  config.h  core.c  core.h  debug.c  debug.h  fs_management.c  fs_management.h  game.c  game.h  gen.c  gen.h  global.c  global.h  input.c  input.h  lang.c  lang.h  logic.c  logic.h  main.c  main.cpp  main.h  mman.c  version.h
source/animation/: animation.c  animation.h
source/chess/: archive.c  archive.h  chess.c  chess.h  core.c  core.h  dot.c  dot.h  event.c  event.h  fen.c  fen.h  middle.c  middle.h  touch.c  touch.h
source/dashboard/: destroy.c  destroy.h  gui.c  gui.h  gui_alias.c  gui_alias.h  ingame.c  ingame.h  menu.c  menu.h  popup.c  popup.h  textbox.c  textbox.h
source/engine/: engine.c  engine.h
source/network/: client.c  client.h  lobby.c  lobby.h  net.c  net.h  net_utils.c  net_utils.h  recv.c  recv.h  send.c  send.h  server.c  server.h
source/pp4m/: pp4m.c  pp4m.h  pp4m_draw.c  pp4m_draw.h  pp4m_image.c  pp4m_image.h  pp4m_input.c  pp4m_input.h  pp4m_io.c  pp4m_io.h  pp4m_net.c  pp4m_net.h  pp4m_ttf.c  pp4m_ttf.h
source/security/: debug.c  debug.h  sec.c  sec.h
