AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = c4chess
c4chess_SOURCES = source/main.c source/global.c source/config.c source/mman.c source/lang.c source/animation/animation.c source/chess/core.c source/chess/middle.c source/chess/chess.c source/chess/dot.c source/chess/event.c source/chess/fen.c source/chess/archive.c source/dashboard/gui.c source/dashboard/gui_alias.c source/dashboard/menu.c source/network/net.c source/network/net_utils.c source/network/send.c source/network/recv.c source/network/client.c source/network/server.c source/network/lobby.c source/security/sec.c source/security/debug.c
